# CPPConsole

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  makefile  vercel.json
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml
cmake/: CPPConsoleConfig.cmake.in
include/: ansi.hpp  color.hpp  console.hpp  cppconsole.hpp  cursor.hpp  data.hpp  dimensions.hpp  erase.hpp  graphics.hpp  printall.hpp  template.hpp  util.hpp
test/: test.cpp
